--- a/css/brand.css
+++ b/css/brand.css
@@ -224,6 +224,7 @@ body {
     /* align-content: flex-start;  */
     gap: 0;
     justify-content: center;
+
     margin-top: 20vw;
 }
 
@@ -264,6 +265,10 @@ body {
     display: block;
 }
 
+.brandRightbox_4 > div {
+    position: relative;
+}
+
 .brand4_Text {
     position: absolute;
     top: 50%;
@@ -274,8 +279,25 @@ body {
     font-family: "Cormorant Garamond", serif;
     font-weight: lighter;
     /* background-color: aqua; */
-    width: auto;
+    /* width: auto; */
     font-size: 36px;
+    /* border: 1px solid red; */
+}
+
+.B4_pBox {
+    width: 100%;
+    height: 100%;
+    /* background-color: antiquewhite; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.B4_pBox > p {
+    color: #fff;
+    font-size: 40px;
 }
 
 /* 섹션5 */
