--- a/css/contact.css
+++ b/css/contact.css
@@ -62,6 +62,7 @@ body {
     font-size: 20px;
     /* margin-top: 55px; */
     margin-bottom: 100px;
+    font-family: "Pretendard";
 }
 
 /* 섹션2 */
@@ -90,18 +91,23 @@ body {
     position: relative;
 }
 
+.con2_ImgBox > img {
+    width: 100%;
+}
+
 .con2_ImgBox > .conLog {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 35%;
+    /* border: 1px solid red; */
 }
 
 .con2_ImgBox > h3 {
     position: absolute;
     left: 50%;
-    top: 58%;
+    top: 60%;
     transform: translate(-50%, -50%);
     font-size: 22px;
     font-weight: 400;
