--- a/css/product.css
+++ b/css/product.css
@@ -104,7 +104,7 @@ html {
     margin: 0 auto;
     display: flex;
     align-items: center;
-    border-bottom: 0.5px solid #999999;
+    border-bottom: 0.5px solid #ccc;
     position: relative;
 }
     .product_p2Inbox{
@@ -212,6 +212,10 @@ html {
             align-items: center;
             cursor: pointer;
         }
+            .product_page3_gridBox_product:hover{
+                transition: all 0.3s ease;
+                transform: scale(1.02);
+            }
         .product_page3_imgbox{
             background-color: #bbb;
             width: 100%;
@@ -280,7 +284,7 @@ html {
         justify-content: center;
         position: relative;
         margin: auto;
-        border-bottom: 0.5px solid #999999;
+        border-bottom: 0.5px solid #ccc;
         margin-top: 4%;
     }
         .product_2page_samegridBox{
@@ -303,6 +307,10 @@ html {
                 align-items: center;
                 justify-content: center;
             }
+                    .product_2page_samegrid:hover{
+                        transition: all 0.3s ease;
+                        transform: scale(1.02);
+                    }
                 .product_2page_samegrid img{
                     width: 100%;
                     height: 100%;
