--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,17 @@ html {
   -webkit-text-fill-color: transparent;
   animation: shine 3s linear infinite;
 }
+.home_fade-item {
+  opacity: 0;
+  /* transform: translateY(40px); */
+  transition: all 1.2s ease;
+}
+.home_fade-item.home_active {
+  opacity: 1;
+  transform: translateY(0);
+}
+#home_intro .home_intro-left.home_active { transition-delay: 0.2s; }
+#home_intro .home_intro-right.home_active { transition-delay: 0.4s; }
 
 @keyframes shine {
   0% {
@@ -321,6 +332,7 @@ html {
   padding: 160px 0;
   position: relative;
   z-index: 6;
+  opacity: 1;
 }
 
 .home_product-inner {
@@ -514,17 +526,9 @@ html {
   height: 100%;
   object-fit: cover;
   display: block;
-  animation: rndZoom 1s ease-in-out forwards;
+  transform: scale(1.2); 
   transform-origin: center center;
-}
-@keyframes rndZoom {
-  0% {
-    transform: scale(1.5);
-  }
-
-  100% {
-    transform: scale(1);
-  }
+  transition: transform 1.4s ease-in-out;
 }
 .home_slideUp-item {
   opacity: 0;
@@ -581,6 +585,11 @@ html {
   font-weight: bold;
   color: #222;
 }
+#home_rnd .home_slideUp-item:nth-child(1) { transition-delay: 0.1s; }
+#home_rnd .home_slideUp-item:nth-child(2) { transition-delay: 0.3s; }
+#home_rnd .home_slideUp-item:nth-child(3) { transition-delay: 0.5s; }
+#home_rnd .home_slideUp-item:nth-child(4) { transition-delay: 0.7s; }
+#home_rnd .home_slideUp-item:nth-child(5) { transition-delay: 0.9s; }
 
 /* ================= MOVING TEXT SECTION ================= */
 #home_movingText {
