--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ html {
 /* ================= SCROLL INDICATOR ================= */
 #home_scrollIndicator {
   position: fixed;
-  right:90px;
+  right:5.5rem;
   bottom: 0;
   display: flex;
   align-items: flex-start;
-  gap:13px;
+  gap:0.8rem;
   z-index: 10;
   opacity: 1;
   transition: opacity 0.6s ease;
@@ -40,7 +40,7 @@ html {
   pointer-events: none;
 }
 .home_scrollText {
-  font-size: 12.5px;
+  font-size: 0.8rem;
   font-weight: 500;
   writing-mode: vertical-rl;
   color: #fff;
@@ -50,7 +50,7 @@ html {
 .home_scrollBar {
   position: relative;
   width: 1px;
-  height: 200px;
+  height: 12.5rem;
   background: rgba(255, 255, 255, 0.5);
   overflow: hidden;
 }
@@ -82,11 +82,11 @@ html {
 /* ================= ARROWS ================= */
 .home_arrows {
   position: fixed;
-  bottom: 40px;
+  bottom: 2.5rem;
   left: 50%;
   transform: translateX(-50%);
-  width: 180px;
-  height: 60px;
+  width: 11rem;
+  height: 3.75rem;
   z-index: 30;
   color: #eee;
   opacity: 1;
@@ -100,7 +100,7 @@ html {
 .home_rightArrow {
   position: absolute;
   top: 50%;
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 .home_leftArrow {
   left: 0;
@@ -118,7 +118,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 100px;
+  padding-left: 6.25rem;
   background: #f7f6f3;
   overflow: visible;
   z-index: 5;
@@ -130,21 +130,19 @@ html {
   align-items: flex-start;
   justify-content: space-between;
   width: 70%;
-  max-width: 1200px;
-  gap: 380px;
+  max-width: 75rem;
+  gap: 24rem;
   /* position: relative;
   z-index: 10; */
 }
 .home_intro-left h2 {
   font-family: "Cormorant", serif;
-  font-size: 4.5rem;
+  font-size: clamp(2.5rem, 4vw, 4.5rem);
   line-height: 1.3;
   font-weight: 500;
   color: #000;
 }
 .vyor-text {
-  position: relative;
-  display: inline-block;
   background: linear-gradient(
     90deg,
     #111 0%,      
