--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ html {
 /* ================= SCROLL INDICATOR ================= */
 #home_scrollIndicator {
   position: fixed;
-  right:90px;
+  right:5.5rem;
   bottom: 0;
   display: flex;
   align-items: flex-start;
-  gap:13px;
+  gap:0.8rem;
   z-index: 10;
   opacity: 1;
   transition: opacity 0.6s ease;
@@ -40,7 +40,7 @@ html {
   pointer-events: none;
 }
 .home_scrollText {
-  font-size: 12.5px;
+  font-size: 0.8rem;
   font-weight: 500;
   writing-mode: vertical-rl;
   color: #fff;
@@ -50,7 +50,7 @@ html {
 .home_scrollBar {
   position: relative;
   width: 1px;
-  height: 200px;
+  height: 12.5rem;
   background: rgba(255, 255, 255, 0.5);
   overflow: hidden;
 }
@@ -82,11 +82,11 @@ html {
 /* ================= ARROWS ================= */
 .home_arrows {
   position: fixed;
-  bottom: 40px;
+  bottom: 2.5rem;
   left: 50%;
   transform: translateX(-50%);
-  width: 180px;
-  height: 60px;
+  width: 11rem;
+  height: 3.75rem;
   z-index: 30;
   color: #eee;
   opacity: 1;
@@ -100,7 +100,7 @@ html {
 .home_rightArrow {
   position: absolute;
   top: 50%;
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 .home_leftArrow {
   left: 0;
@@ -118,7 +118,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 100px;
+  padding-left: 6.25rem;
   background: #f7f6f3;
   overflow: visible;
   z-index: 5;
@@ -130,21 +130,17 @@ html {
   align-items: flex-start;
   justify-content: space-between;
   width: 70%;
-  max-width: 1200px;
-  gap: 380px;
-  /* position: relative;
-  z-index: 10; */
-}
+  max-width: 75rem;
+  gap: 24rem;
+ }
 .home_intro-left h2 {
   font-family: "Cormorant", serif;
-  font-size: 4.5rem;
+  font-size: clamp(2.5rem, 4vw,4.5rem);
   line-height: 1.3;
   font-weight: 500;
   color: #000;
 }
 .vyor-text {
-  position: relative;
-  display: inline-block;
   background: linear-gradient(
     90deg,
     #111 0%,      
@@ -156,7 +152,7 @@ html {
   -webkit-text-fill-color: transparent;
   animation: shine 3s linear infinite;
 }
-.home_fade-item {
+/* .home_fade-item {
   opacity: 0;
   transform: translateY(40px);
   transition: all 1.2s ease;
@@ -166,7 +162,7 @@ html {
   transform: translateY(0);
 }
 #home_intro .home_intro-left.home_active { transition-delay: 0.2s; }
-#home_intro .home_intro-right.home_active { transition-delay: 0.4s; }
+#home_intro .home_intro-right.home_active { transition-delay: 0.4s; } */
 
 @keyframes shine {
   0% {
@@ -191,7 +187,7 @@ html {
   color: #555;
 }
 .home_intro-right a{
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: bold;
   color: #333;
 }
@@ -203,21 +199,21 @@ html {
   z-index: 1;
 }
 .home_shape-left {
-  width: 870px;
-  height: 870px;
-  top: -110px;
-  left: -80px;
+  width: 54.375rem;
+  height: 54.375rem;
+  top: -6.875rem;
+  left: -5rem;
   border: 1px solid rgba(0, 0, 0, 0.18);
-  clip-path: inset(110px 0 0 0);
+  clip-path: inset(6.875rem 0 0 0);
 }
 
 .home_shape-left::after {
   content: "";
   position: absolute;
-  top: -5px;
-  left: -5px;
-  width: 1060px;
-  height: 120px; /* 덮을 높이 (값 조정 가능) */
+  top: -0.313rem;
+  left: -0.313rem;
+  width: 66.25rem;
+  height: 7.5rem; /* 덮을 높이 (값 조정 가능) */
   background: rgba(255, 255, 255, 0.25);
   z-index: 2;
 }
@@ -238,14 +234,14 @@ html {
 .home_shape-right::before {
   width: 1px;
   height: 100%;
-  right: 30px;
+  right: 1.875rem;
   top: 0;
 }
 .home_shape-right::after {
   width: 1px;
   height: 300%;
-  right: -100px;
-  top: -150px;
+  right: -6.25rem;
+  top: -9.375rem;
   transform: rotate(-45deg);
   transform-origin: top right;
 }
@@ -254,9 +250,9 @@ html {
 .home_view-more {
   display: inline-flex;
   align-items: center;
-  gap: 12px;
-  margin-top: 40px;
-  font-size: 1.35rem;
+  gap: 0.75rem;
+  margin-top: 2.5rem;
+  font-size: 1.2rem;
   font-family: "Cormorant", serif;
   color: #111;
   letter-spacing: 0.5px;
@@ -268,23 +264,14 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 47px;
-  height: 47px;
+  width: 2.8rem;
+  height: 2.8rem;
   border: 1.2px solid #333;
   border-radius: 50%;
   font-size: 1.5rem;
   transition: all 0.4s ease;
   background-image: url(../img/etc/icon/btnMore_arr2.png);
 }
-.home_product-text a{
-  font-size: 18px;
-  font-weight: bold;
-  color: #333;
-}
-
-/* .home_view-more:hover {
-  color: #111;
-} */
 .home_view-more:hover span {
   border-color: #000;
   background: #000;
@@ -293,23 +280,22 @@ html {
 .home_contact_view-more {
   display: inline-flex;
   align-items: center;
-  gap: 12px;
-  margin-top: 40px;
+  gap: 0.75rem;
+  margin-top: 2.5rem;
   font-size: 1.35rem;
   font-family: "Cormorant ", serif;
-  color: #e6e6e6;
-  letter-spacing: 0.5px;
   text-decoration: none;
+  color: #e6e6e6;
   transition: color 0.3s ease;
 }
 
 .home_contact_view-more span {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 55px;
-  height: 55px;
-  border: 1.2px solid #e6e6e6;
+  width: 3.4rem;
+  height: 3.4rem;
+  border: 1px solid #e6e6e6;
   border-radius: 50%;
   font-size: 1.5rem;
   transition: all 0.4s ease;
@@ -317,8 +303,7 @@ html {
 .home_contact_view-more:hover span {
   border-color: #000;
   background: #000;
-  /* color: #fff; */
-}
+ }
 .home_rnd-right .home_view-more {
   transition-delay: 1.3s;
 }
@@ -327,10 +312,9 @@ html {
   width: 100%;
   min-height: 100vh;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   background: #fff;
-  padding: 160px 0;
+  padding: 10rem 0;
   position: relative;
   z-index: 6;
 }
@@ -340,16 +324,16 @@ html {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  gap: 100px;
+  gap: 6.25rem;
 }
 
 /* 🔹 왼쪽 텍스트 */
 .home_product-text {
   flex: 0 0 30%;
   text-align: left;
-  margin-left: 100px;
+  margin-left: 6.25rem;
   opacity: 0;
-  transform: translateY(50px); 
+  transform: translateY(3.125rem); 
   transition: all 1.4s cubic-bezier(0.25, 0.1, 0.25, 1); 
   will-change: transform, opacity;
 }
@@ -387,8 +371,8 @@ html {
   font-weight: 600;
   line-height: 1.2;
   color: #111;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-top: 2.5rem;
+  margin-bottom: 1.25rem;
 }
 
 .home_product-text p {
@@ -396,7 +380,7 @@ html {
   line-height: 1.9;
   color: #555;
   /* margin-bottom: 20px; */
-  max-width: 420px;
+  max-width: 26.25rem;
   font-family: "Pretendard";
 }
 
@@ -409,7 +393,7 @@ html {
 
 .home_product-gallery {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
   opacity: 0;
   transform: translateY(50px);
   transition: transform 1s ease;
@@ -462,7 +446,7 @@ html {
   display: flex;
   flex-direction: column;
   flex: 0 0 40%;
-  padding-bottom: 20px;
+  padding-bottom: 1.25rem;
 }
 
 .home_card img {
@@ -473,7 +457,7 @@ html {
 
 .home_card h4 {
   font-size: 1.1rem;
-  margin: 14px 0 6px;
+  margin: 0.875rem 0 0.375rem;
   font-weight: 600;
 }
 
@@ -481,14 +465,14 @@ html {
   font-size: 0.9rem;
   color: #333;
   line-height: 1.6;
-  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
   text-align: center;
 }
 
 .home_price {
   font-size: 0.85rem;
   color: #777;
-  padding-bottom: 20px;
+  padding-bottom: 1.25rem;
 }
 /* ================= R&D SECTION ================= */
 #home_rnd {
@@ -508,7 +492,7 @@ html {
   align-items: stretch;
   justify-content: space-between;
   width: 100%;
-  max-width: 1600px;
+  max-width: 100rem;
   height: 100vh;
 }
 
@@ -545,15 +529,14 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 80px;
+  padding-left: 5rem;
   color: #111;/
 }
 .home_rnd-right .home_subtitle {
   font-size: 1.2rem;
   font-weight: bold;
   color: #000;
-  letter-spacing: 1px;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
   transition-delay: 0.1s;
   font-family: "Cormorant", serif;
 }
@@ -561,7 +544,7 @@ html {
   font-family: "Cormorant", serif;
   font-size: 3.5rem;
   line-height: 1.3;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
   font-weight: 600;
   transition-delay: 0.4s;
 }
@@ -569,7 +552,7 @@ html {
   font-size: 1.3rem;
   color: #111;
   font-weight: 500;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   transition-delay: 0.7s;
 }
 .home_rnd-right p {
@@ -596,7 +579,7 @@ html {
   width: 100%;
   overflow: hidden;
   background: #f5f3ee;
-  padding: 100px 0;
+  padding: 6.25rem 0;
   position: relative;
   z-index: 8;
 }
@@ -609,11 +592,11 @@ html {
 }
 .home_text-line {
   display: inline-flex;
-  gap: 80px;
+  gap: 5rem;
   font-family: "Cormorant", sans-serif;
   font-size: 16rem  !important;
   font-weight: 500;
-  letter-spacing: 4px;
+  letter-spacing: 0.25rem;
   color: #1a1a1a;
   animation: home_moveText 50s linear infinite;
 }
@@ -658,7 +641,6 @@ html {
   height: 100%;
   object-fit: cover;
   z-index: 3;
-  /* opacity: 1; */
   filter: blur(15px);
   transform: scale(1.1);
   transition: all 1s ease;
@@ -672,15 +654,15 @@ html {
   z-index: 5;
   text-align: center;
   color: #fff;
-  max-width: 800px;
-  padding: 0 20px;
+  max-width:50rem;
+  padding: 0 1.25rem;
   opacity: 1;
 }
 .home_press-text .home_subtitle {
   font-family: "Cormorant", serif;
   display: block;
   font-size: 1.5rem;
-  margin-bottom: 40px;
+  margin-bottom: 1.875rem;
   color: #fff;
 }
 
@@ -689,7 +671,7 @@ html {
   font-size: 4.5rem;
   font-weight: 500;
   line-height: 1.25;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
   opacity: 0.8;
 }
 
@@ -697,15 +679,15 @@ html {
   font-size: 1.35rem;
   line-height: 1.9;
   color: #f5f5f5;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
   font-weight: 600;
   opacity: 0.8;
 }
 /* 수연코드 */
 /* popup */
     .popupBox{
-        width: 500px;
-        height: 650px;
+        width: 31.25rem;
+        height: 40.625rem;
         /* background-color: tomato; */
         position: fixed;
         z-index: 9999;
@@ -713,8 +695,8 @@ html {
         inset: 0;
     }
         .popup_imgBox{
-            width: 500px;
-            height: 650px;
+            width: 31.25rem;
+            height: 40.625rem;
             position: relative;
         }
             .popup_imgBox img{
@@ -734,7 +716,7 @@ html {
         }
             .popup_tBox button{
                 width: 100%;
-                height: 40px;
+                height: 2.5rem;
                 border: none;
                 position: absolute;
                 bottom: 0;
@@ -749,3 +731,95 @@ html {
   position: relative;
   z-index: 50; 
 } */
+
+@media(max-width:768px){
+  html{
+    font-size: 15px;
+  }
+  #home_scrollIndicator, .home_arrows{
+    display: none;
+  } 
+  #home_intro {
+    flex-direction: column;
+    padding: 4rem 2rem;
+  }
+  .home_intro-inner{
+    width: 90%;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  .home_intro-left h2{
+    font-size: 2.2rem;
+  }
+  .home_intro-light p{
+    font-size: 2.2rem;
+  }
+  .home_view-more{
+    font-size: 1.2rem;
+    margin-top: 0.8rem;
+    gap: 0.8rem;
+  }
+  .home_view-more span{
+    background-position: center;
+    transition: background-position 0.3s ease;
+    width: 2.2rem;
+    height: 2.2rem;
+    font-size: 1rem;
+  }
+  .home_view-more:hover span{
+    background-position: center;
+  }
+  .home_contact_view-more {
+    font-size: 1rem;
+  }
+
+  .home_contact_view-more span {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  #home_product {
+    flex-direction: column;
+    padding: 6rem 0;
+  }
+  #home_product-inner {
+    flex-direction: column;
+    gap: 5rem;
+  }
+  .home_product-text{
+    margin-left: 0;
+    text-align: center;
+  }
+  .home_product-text h2{
+    font-size: 2.3rem;
+  }
+  .home_gallery-wrap {
+    width: 100%;
+  }
+  .home_card{
+    min-width: 100%;
+  }
+  .home_rnd-inner{
+    padding-left: 0;
+    text-align: center;
+  }
+  .home_rnd-right{
+    padding-left: 0;
+    text-align: center;
+  }
+  .home_rnd-right h2{
+    font-size: 2.1rem;
+  }
+  .home_rnd-right p{
+    font-size: 1rem;
+  }
+  .home_text-line{
+    font-size: 6rem ;
+  }
+  .home_press-text h2{
+    font-size: 2rem;
+  }
+  .home_press-text p{
+    font-size: 1rem;
+  }
+  
+}
